--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.3.1",
     "react-pdf": "^5.6.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
